--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,26 @@
-  body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-  }
-
-  header {
-      background: #333;
-      color: #fff;
-      padding: 10px 0;
-      text-align: center;
-  }
-
-  main {
-      padding: 20px;
-  }
-
-  section {
-      margin-bottom: 20px;
-  }
-
-  footer {
-      background: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px 0;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-  }
+body {
+    margin: 0;
+    padding: 0;
+    background-color: gray;
+    font-family: 'Times New Roman', Times, serif;
+}
+header {
+    width: 100%;
+    height: 100px;
+    background-color: white;
+    border-bottom: 2px solid black;
+    margin: 0;
+}
+.title {
+    text-align: center;
+    padding: 20px;
+    font-size: 36px;
+    color: black;
+    margin: 0;
+}
+nav {
+    text-align: center;
+    text-decoration: none;
+    margin: 0;
+    display: inline;
+}
